--- a/index.html
+++ b/index.html
@@ -4,10 +4,143 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Abjad Calculator</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>
-        HELLO, WORLD!!! 
-    </h1>
+    <div class="table-container">
+        <!-- Ordinal Positions Table -->
+        <h2>Ordinal Positions</h2>
+        <table>
+            <tr>
+                <td></td> <!-- Gap -->
+                <td>26</td>
+                <td>23</td>
+                <td>20</td>
+                <td>17</td>
+                <td></td> <!-- Gap -->
+                <td>14</td>
+                <td>11</td>
+                <td>8</td>
+                <td>5</td>
+                <td></td> <!-- Gap -->
+            </tr>
+            <tr>
+                <td>1</td> 
+                <td>27</td>
+                <td>24</td> 
+                <td>21</td>
+                <td>18</td>
+                <td></td> <!-- Gap -->
+                <td>15</td>
+                <td>12</td>
+                <td>9</td>
+                <td>6</td>
+                <td>3</td>
+            </tr>
+            <tr>
+                <td>2</td> 
+                <td>28</td>
+                <td>25</td>
+                <td>22</td>
+                <td>19</td>
+                <td></td> <!-- Gap -->
+                <td>16</td>
+                <td>13</td>
+                <td>10</td>
+                <td>7</td>
+                <td>4</td>
+            </tr>
+        </table>
+
+        <!-- Abjad Letters Calculator Table -->
+        <h2>Abjad Letters Calculator</h2>
+        <table>
+            <tr>
+                <td></td> <!-- Gap -->
+                <td id="calcBtn"><button class="abjad-calc-button">ض</button></td>
+                <td id="calcBtn"><button class="abjad-calc-button">ث</button></td>
+                <td id="calcBtn"><button class="abjad-calc-button">ر</button></td>
+                <td id="calcBtn"><button class="abjad-calc-button">ف</button></td>
+                <td></td> <!-- Gap -->
+                <td id="calcBtn"><button class="abjad-calc-button">ن</button></td>
+                <td id="calcBtn"><button class="abjad-calc-button">ك</button></td>
+                <td id="calcBtn"><button class="abjad-calc-button">ح</button></td>
+                <td id="calcBtn"><button class="abjad-calc-button">٥</button></td>
+                <td></td> <!-- Gap -->
+            </tr>
+            <tr>
+                <td id="calcBtn"><button class="abjad-calc-button">أ</button></td> 
+                <td id="calcBtn"><button class="abjad-calc-button">ظ</button></td>
+                <td id="calcBtn"><button class="abjad-calc-button">خ</button></td> 
+                <td id="calcBtn"><button class="abjad-calc-button">ش</button></td>
+                <td id="calcBtn"><button class="abjad-calc-button">ص</button></td>
+                <td></td> <!-- Gap -->
+                <td id="calcBtn"><button class="abjad-calc-button">س</button></td>
+                <td id="calcBtn"><button class="abjad-calc-button">ل</button></td>
+                <td id="calcBtn"><button class="abjad-calc-button">ط</button></td>
+                <td id="calcBtn"><button class="abjad-calc-button">و</button></td>
+                <td id="calcBtn"><button class="abjad-calc-button">ج</button></td>
+            </tr>
+            <tr>
+                <td id="calcBtn"><button class="abjad-calc-button">ب</button></td>
+                <td id="calcBtn"><button class="abjad-calc-button">غ</button></td>
+                <td id="calcBtn"><button class="abjad-calc-button">ذ</button></td>
+                <td id="calcBtn"><button class="abjad-calc-button">ت</button></td>
+                <td id="calcBtn"><button class="abjad-calc-button">ق</button></td>
+                <td></td> <!-- Gap -->
+                <td id="calcBtn"><button class="abjad-calc-button">ع</button></td>
+                <td id="calcBtn"><button class="abjad-calc-button">م</button></td>
+                <td id="calcBtn"><button class="abjad-calc-button">ي</button></td>
+                <td id="calcBtn"><button class="abjad-calc-button">ز</button></td>
+                <td id="calcBtn"><button class="abjad-calc-button">د</button></td>
+            </tr>
+        </table>
+
+        <!--Numerical Values Table-->
+        <h2>Numerical Values</h2>
+        <table>
+            <tr>
+                <td></td> <!-- Gap -->
+                <td>800</td>
+                <td>500</td>
+                <td>200</td>
+                <td>80</td>
+                <td></td> <!-- Gap -->
+                <td>50</td>
+                <td>20</td>
+                <td>8</td>
+                <td>5</td>
+                <td></td> <!-- Gap -->
+            </tr>
+            <tr>
+                <td>1</td> 
+                <td>900</td>
+                <td>600</td> 
+                <td>300</td>
+                <td>90</td>
+                <td></td> <!-- Gap -->
+                <td>60</td>
+                <td>30</td>
+                <td>9</td>
+                <td>6</td>
+                <td>3</td>
+            </tr>
+            <tr>
+                <td>2</td> 
+                <td>1000</td>
+                <td>700</td>
+                <td>400</td>
+                <td>100</td>
+                <td></td> <!-- Gap -->
+                <td>70</td>
+                <td>40</td>
+                <td>10</td>
+                <td>7</td>
+                <td>4</td>
+            </tr>
+
+
+
+        </table>
 </body>
 </html>
