added text box for abjad value, calculate button, clear button

--- a/index.html
+++ b/index.html
@@ -96,6 +96,13 @@
             </tr>
         </table>
 
+        <label for="">Abjad Value:</label>
+        <input type="text" id="name" name="name" size="50" />
+        <button>Calculate</button>
+        <button>Clear</button>
+
+        <br><br>
+
         <!--Numerical Values Table-->
         <h2>Numerical Values</h2>
         <table>
